Code update with Email issue fix

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,8 +2,8 @@
   "EmailSettings": {
     "SmtpServer": "smtp.gmail.com",
     "Port": 587,
-    "SenderEmail": "devevaaatest@gmail.com",
-    "SenderPassword": "AAA@Dev2024"
+    "SenderEmail": "jegadeesh.rj@gmail.com",
+    "SenderPassword": "guueyvibxmneowlu"
   },
   "Logging": {
     "LogLevel": {
